--- a/style.css
+++ b/style.css
@@ -217,6 +217,11 @@ column:nth-child(1) {
   border-right: 4px solid;
   border-radius: 16px;
 }
+
 column {
   padding: 0 10px;
+}
+
+img {
+  border-radius: 20px;
 }
